<resources>
    <string name="app_name">Kenari</string>
    <string name="app_name2">Halo </string>
    <string name="signup">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="message_welcome_page">Aplikasi ini adalah solusi bagi Anda yang ingin menjaga kesehatan mental dengan berbagai fitur dan panduan yang mendukung kesehatan mental anda!</string>
    <string name="title_welcome_page">Selamat datang di KenariApp!</string>
    <string name="title_signup_page">SIGN UP</string>
    <string name="message_signup_page">Daftarkan Akunmu, Gratiss</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">WELCOME</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="about">Pengaturan Akun</string>
    <string name="desc_feature1">Terhubung dengan orang-orang yang memiliki minat serupa dalam menjaga kesehatan mental belum pernah semudah ini. </string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur. Ultricies amet aliquet donec vulputate. Quisque purus vestibulum urna diam eu ultrices arcu convallis. A leo pretium sit ultricies feugiat sociis libero.</string>
    <string name="desc_feature2">Temukan sisi lain dari dirimu dan jelajahi potensimu dengan tes kepribadian MBTI.</string>
    <string name="desc_feature3">Mendapatkan dukungan emosional kapan saja dan di mana saja dengan Chatbot Kenari. Kami siap mendengarkan dan membantu kamu mengatasi masalah yang sedang kamu hadapi.</string>
    <string name="sample_message">This is a sample message that will appear</string>
    <string name="input_chatbot_hint">Tulis pesan</string>
    <string name="mbti_hint_question">Note: Centang semua karakter yang cocok dengan kamu!</string>

    <!--    MBTI String    -->
    <string name="C001">Serius, tenang, stabil dan damai.</string>
    <string name="C002">Senang pada fakta, logis, obyektif, praktis dan realistis.</string>
    <string name="C003">Task Oriented, tekun, teratur, menepati janji, dapat diandalkan dan bertanggung jawab.</string>
    <string name="C004">Pendengar yang baik, setia, hanya mau berbagi dengan orang dekat.</string>
    <string name="C005">Memegang aturan, standar dan prosedur dengan teguh.</string>
    <string name="C006">Penuh pertimbangan, hati-hati, teliti dan akurat.</string>
    <string name="C007">Serius, tenang, stabil namun sensitif.</string>
    <string name="C008">Ramah, perhatian pada perasaan dan kebutuhan orang lain, setia, kooperatif, pendengar yang baik.</string>
    <string name="C009">Punya kemampuan mengorganisasi, detail, teliti, sangat bertanggung jawab dan bisa diandalkan.</string>
    <string name="C010">Tenang, pendiam, cenderung kaku, dingin, hati-hati, penuh pertimbangan.</string>
    <string name="C011">Logis, rasional, kritis, obyektif, mampu mengesampingkan perasaan.</string>
    <string name="C012">Mampu menghadapi perubahan mendadak dengan cepat dan tenang.</string>
    <string name="C013">Percaya diri, tegas dan mampu menghadapi perbedaan maupun kritik.</string>
    <string name="C014">Mampu menganalisis, mengorganisir dan mendelegasikan.</string>
    <string name="C015">Problem solver yang baik terutama untuk masalah teknis dan keadaan mendadak.</string>
    <string name="C016">Berfikiran simple dan praktis, fleksibel, sensitive, ramah, tidak menonjolkan diri, rendah hati pada kemampuannya.</string>
    <string name="C017">Menghindari konflik, tidak memaksakan pendapat atau nilai-nilainya pada orang lain.</string>
    <string name="C018">Biasanya tidak mau memimpin tetapi menjadi pengikut dan pelaksana setia.</string>
    <string name="C019">Seringkali santai menyelesaikan sesuatu, karena sangat menikmati apa yang terjadi saat ini.</string>
    <string name="C020">Menunjukkan perhatian lebih banyak melalui tindakan dibandingkan kata-kata.</string>
    <string name="C021">Perhatian, empati, sensitif dan berkomitmen terhadap sebuah hubungan.</string>
    <string name="C022">Sukses karena ketekunan, originalitas dan keinginan kuat untuk melakukan apa saja yang diperlukan termasuk memberikan yang terbaik dalam pekerjaan.</string>
    <string name="C023">Idealis, perfeksionis, memegang teguh prinsip.</string>
    <string name="C024">Visioner, penuh ide, kreatif, suka merenung dan inspiratif.</string>
    <string name="C025">Biasanya diikuti dan dihormati karena kejelasan visi serta dedikasi pada hal-hal baik.</string>
    <string name="C026">Visioner, punya perencanaan praktis dan biasanya memiliki ide-ide original serta dorongan kuat untuk mencapainya.</string>
    <string name="C027">Mandiri dan terpercaya.</string>
    <string name="C028">Punya kemampuan analisis yang bagus serta menyederhanakan sesuatu yang rumit dan abstrak menjadi sesuatu yang praktis, mudah difahami dan dipraktekan.</string>
    <string name="C029">Skeptis, kritis, logis, menentukan (determinatif) dan kadang keras kepala.</string>
    <string name="C030">Punya keinginan untuk berkembang serta selalu ingin lebih maju dari orang lain.</string>
    <string name="C031">Kritik dan konflik tidak menjadi masalah berarti.</string>
    <string name="C032">Sangat perhatian dan peka dengan perasaan orang lain.</string>
    <string name="C033">Penuh dengan antusiasme dan kesetiaan, tapi biasanya hanya untuk orang dekat.</string>
    <string name="C034">Peduli pada banyak hal, cenderung mengambil terlalu banyak dan menyelesaikan sebagian.</string>
    <string name="C035">Cenderung idealis dan perfeksionis.</string>
    <string name="C036">Berfikir win-win solution, mempercayai dan mengoptimalkan orang lain.</string>
    <string name="C037">Sangat menghargai intelektualitas dan pengetahuan, menikmati hal-hal teoritis dan ilmiah, senang memecahkan masalah dengan logika dan analisa.</string>
    <string name="C038">Diam dan menahan diri, lebih suka bekerja sendiri.</string>
    <string name="C039">Cenderung kritis, skeptis, mudah curiga dan pesimis.</string>
    <string name="C040">Tidak suka memimpin dan bisa menjadi pengikut yang tidak banyak menuntut.</string>
    <string name="C041">Cenderung memiliki minat yang jelas, membutuhkan karir dimana minatnya bisa berkembang dan bermanfaat, jika menemukan sesuatu yang menarik minatnya, ia akan sangat serius dan antusias menekuninya.</string>
    <string name="C042">Spontan, aktif, energetik, cekatan, cepat, sigap, antusias, fun dan penuh variasi.</string>
    <string name="C043">Komunikator, asertif, to the point, ceplas-ceplos, berkarisma, punya interpersonal skill yang baik.</string>
    <string name="C044">Baik dalam pemecahan masalah langsung di tempat, mampu menghadapi masalah, konflik dan kritik, tidak khawatir, menikmati apapun yang terjadi.</string>
    <string name="C045">Cenderung untuk menyukai sesuatu yang mekanistis, kegiatan bersama dan olahraga.</string>
    <string name="C046">Mudah beradaptasi, toleran, pada umumnya konservatif tentang nilai-nilai, tidak suka penjelasan terlalu panjang, paling baik dalam hal-hal nyata yang dapat dilakukan.</string>
    <string name="C047">Outgoing, easygoing, mudah berteman, bersahabat, sangat sosial, ramah, hangat dan menyenangkan.</string>
    <string name="C048">Optimis, ceria, antusias, fun, menghibur, suka menjadi perhatian.</string>
    <string name="C049">Punya interpersonal skill yang baik, murah hati, mudah simpatik, dan mengenali perasaan orang lain, menghindari konflik dan menjaga keharmonisan suatu hubungan.</string>
    <string name="C050">Mengetahui apa yang terjadi di sekelilingnya dan ikut serta dalam kegiatan tersebut.</string>
    <string name="C051">Sangat baik dalam keadaan yang membutuhkan common sense, tindakan cepat dan keterampilan praktis.</string>
    <string name="C052">Ramah, hangat, energetik, optimis, antusias, semangat tinggi, fun.</string>
    <string name="C053">Imaginatif, penuh ide, kreatif, inovatif.</string>
    <string name="C054">Mampu beradaptasi dengan beragam situasi dan perubahan.</string>
    <string name="C055">Pandai berkomunikasi, senang bersosialisasi, dan membawa suasana positif.</string>
    <string name="C056">Mudah membaca perasaan dan kebutuhan orang lain.</string>
    <string name="C057">Gesit, kreatif, inovatif, cerdik, logis, baik dalam banyak hal.</string>
    <string name="C058">Banyak bicara dan punya kemampuan debat yang baik, bisa berargumentasi untuk senang-senang saja tanpa merasa bersalah.</string>
</resources>