<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.mbti.Test10Activity">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mbti_hint_question"
        android:textSize="12sp"
        android:layout_marginHorizontal="5sp"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/blue_500"
            android:text="Cooperative vs. Competitive"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/blue_500"
                android:gravity="end"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/darkgray"
                android:gravity="end"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/darkgray"
                android:gravity="end"/>
        </LinearLayout>

    </LinearLayout>


    <!-- Checkbox 1 -->
    <LinearLayout
        android:id="@+id/checkbox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/step"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/C036"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/C036"
            android:textSize="16sp"/>
    </LinearLayout>
    <!-- Checkbox 2 -->
    <LinearLayout
        android:id="@+id/checkbox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/checkbox1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/C049"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:text="@string/C049"
            android:textSize="16sp"/>
    </LinearLayout>
    <!-- Checkbox 3 -->
    <LinearLayout
        android:id="@+id/checkbox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/checkbox2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/C057"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/C057"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="296dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Selesai" />

</androidx.constraintlayout.widget.ConstraintLayout>